--- a/example/package.json
+++ b/example/package.json
@@ -4,13 +4,9 @@
   "private": true,
   "dependencies": {
     "@nadfri/react-scroll-progress-bar": "^0.2.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
